[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/card/cards/unit/Banner.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/interface/card/cards/unit/UnitCard.gd" type="Script" id=2]
[ext_resource path="res://source/interface/card/Card.tscn" type="PackedScene" id=3]

[node name="UnitCard" index="0" instance=ExtResource( 3 )]
script = ExtResource( 2 )

[node name="Stats" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]
margin_top = 30.0
margin_right = 210.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ranged" parent="MarginContainer/VBoxContainer/Stats" index="0" instance=ExtResource( 1 )]
margin_right = 32.0
rect_min_size = Vector2( 32, 30 )
color = Color( 0.0784314, 0.152941, 0.560784, 1 )

[node name="Separator2" type="ColorRect" parent="MarginContainer/VBoxContainer/Stats" index="1"]
margin_left = 32.0
margin_right = 34.0
margin_bottom = 30.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Melee" parent="MarginContainer/VBoxContainer/Stats" index="2" instance=ExtResource( 1 )]
margin_left = 34.0
margin_right = 66.0
rect_min_size = Vector2( 32, 30 )
color = Color( 0.619608, 0.101961, 0.101961, 1 )

[node name="Separator3" type="ColorRect" parent="MarginContainer/VBoxContainer/Stats" index="3"]
margin_left = 66.0
margin_right = 144.0
margin_bottom = 30.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Armor" parent="MarginContainer/VBoxContainer/Stats" index="4" instance=ExtResource( 1 )]
margin_left = 144.0
margin_right = 176.0
rect_min_size = Vector2( 32, 30 )
color = Color( 0.34902, 0.603922, 0.603922, 1 )

[node name="Separator4" type="ColorRect" parent="MarginContainer/VBoxContainer/Stats" index="5"]
margin_left = 176.0
margin_right = 178.0
margin_bottom = 30.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Health" parent="MarginContainer/VBoxContainer/Stats" index="6" instance=ExtResource( 1 )]
margin_left = 178.0
margin_right = 210.0
rect_min_size = Vector2( 32, 30 )
color = Color( 0.0666667, 0.513726, 0.113725, 1 )

[node name="Portrait" parent="MarginContainer/VBoxContainer" index="2"]
margin_top = 60.0
